Contact page complete

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,4 @@
-@counter-style repeating-emoji {
-  system: cyclic;
-  symbols: "👍" "🙌" "👌" "✍️";
-  suffix: " ";
-}
-
-.repeating-counter-rule {
-  list-style-type: repeating-emoji;
+.contact-form {
+    margin-top: 5rem;
+    width: 60vw;
 }
