--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,10 @@
 .contact-form {
-    margin-top: 5rem;
-    width: 60vw;
+    width: 70vw;
+}
+
+.donkey-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
 }
