--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,11 @@
 .contact-form {
-    width: 70vw;
+    width: 100%;
+}
+
+@media screen and (min-width: 740px) {
+    .contact-form {
+        width: 50%;
+    }
 }
 
 .donkey-image {
